?뚯꽦 二쇰Ц 二쇰Ц 媛??議곌굔 ?쇰컲 二쇰Ц怨??숈씪?섍쾶 ?곸슜 諛????쇰쭔 留먰븳 寃쎌슦 泥섎━ 異붽?

--- a/server-java/src/main/resources/application.properties
+++ b/server-java/src/main/resources/application.properties
@@ -39,6 +39,10 @@ inventory.default.capacity=30
 
 # Voice order / AI configuration
 # LLM: Groq API (lightweight, fast)
+# 로컬 테스트용: 아래 주석을 해제하고 API 키를 입력하세요
+# voice.llm.api-url=https://api.groq.com/openai/v1/chat/completions
+# voice.llm.api-key=your-groq-api-key-here
+# voice.llm.model=llama-3.1-8b-instant
 voice.llm.api-url=${VOICE_LLM_API_URL:https://api.groq.com/openai/v1/chat/completions}
 voice.llm.api-key=${VOICE_LLM_API_KEY:}
 voice.llm.model=${VOICE_LLM_MODEL:llama-3.1-8b-instant}
